--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@ div.vertical {
 	"use strict";
 
 
-	function loadPage(OFgvG16W4AD114Zm) {
+	function loadPage(pwd) {
 
-		var hash= OFgvG16W4AD114Zm;
-		hash= Sha1.hash(OFgvG16W4AD114Zm);
-		var url= hash + "/_config.yml";
+		var hash= pwd;
+		hash= Sha1.hash(pwd);
+		var url= hash + "/private.html";
 
 		$.ajax({
 			url : url,
