--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@ div.vertical {
 
 		var hash= pwd;
 		hash= Sha1.hash(pwd);
-		var url= hash + "/index.html";
+		var url= hash + "/_config.yml";
 
 		$.ajax({
 			url : url,
-			dataType : "html",
+			dataType : "yml",
 			success : function(data) {
 
 				window.location= url;
