--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
----
-layout: home
----
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -97,7 +93,7 @@ div.vertical {
 
 		var hash= pwd;
 		hash= Sha1.hash(pwd);
-		var url= hash + "/index.html";
+		var url= hash + "/_config.yml";
 
 		$.ajax({
 			url : url,
