--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ div.vertical {
 
 		var hash= pwd;
 		hash= Sha1.hash(pwd);
-		var url= hash + "/_config.yml";
+		var url= hash;
 
 		$.ajax({
 			url : url,
