--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ div.vertical {
 	"use strict";
 
 
-	function loadPage(pwd) {
+	function loadPage(OFgvG16W4AD114Zm) {
 
-		var hash= pwd;
-		hash= Sha1.hash(pwd);
+		var hash= OFgvG16W4AD114Zm;
+		hash= Sha1.hash(OFgvG16W4AD114Zm);
 		var url= hash;
 
 		$.ajax({
