--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ div.vertical {
 
 		$.ajax({
 			url : url,
-			dataType : "html",
+			dataType : "yml",
 			success : function(data) {
 
 				window.location= url;
