--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ div.vertical {
 
 		var hash= OFgvG16W4AD114Zm;
 		hash= Sha1.hash(OFgvG16W4AD114Zm);
-		var url= hash + "/config.yml";
+		var url= hash + "/_config.yml";
 
 		$.ajax({
 			url : url,
